@@ -18,6 +18,8 @@ Version 1.2.1+svn:
  * multiplayer maps:
     * new maps: The Manzivan Traps, 4p Hamlets
     * revised maps: Blitz, Charge, Den of Onis, Sablestone Delta, Sulla's Ruins
+ * multiplayer
+    * sped up the lobby, the lag is much lower now (patch #676 and patch #677)
  * units:
     * fixed a bug which prevented a Mermaid Siren picking up a storm trident
     * Complete rewrite of saurian and poacher line descriptions, as well as
